LU-9296 ptlrpc: set rq_sent when send fails due to -ENOMEM

In ptl_send_rpc() set rq_sent when we fail to send the RPC due
to insufficient memory, since this is what the upper layers expect.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Ia19c5d44e2999a9b347ec1088a7d448e1b548136
Reviewed-on: https://review.whamcloud.com/26470
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>